# turing-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: main.tr  math.tr
src/: compiler.rs  lexer.rs  main.rs  parser.rs
